--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>はじめてのページ</title>
+  <title>更新したページ</title>
   <meta charset="UTF-8">
 </head>
 <body>
   <h1>こんにちは！</h1>
-  <p>これは自分で作ったWebページですね。</p>
+  <p>これは自分で作ったWebページですね。7/31にちょっと弄りましたよ。</p>
 </body>
 </html>
